<?xml version="1.0"?>
<package format="2">
  <name>nlopt_sample</name>
  <version>0.0.0</version>
  <description>The nlopt_sample package</description>

  <maintainer email="sugihara@jsk.imi.i.u-tokyo.ac.jp">sugihara</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nlopt</build_depend>
  <build_export_depend>nlopt</build_export_depend>
  <exec_depend>nlopt</exec_depend>
</package>
